--- a/index.html
+++ b/index.html
@@ -164,20 +164,223 @@
 	<div class="team__page">
 		<div class="team__container">
 			<div class="container__block">
-				<div class="team__dscr">
+				<div class="team__dscr__block">
 					<div class="team__txt">команда</div>
+					<div class="accordeon__block">
 					<div class="team__acordeon">
-						<div class="acordeon__name-ppl">
-							<div class="triagle-down__ppl"></div>
-							<div class="name__ppl">Дэниэл Редклиф</div>
-							<div class="acordeon__elem"></div>
+						<div class="team__name">
+							<div class="pre-name__triagle">
+								</div>
+								<div class="team-name__txt">Ричард Джеймс</div>
 						</div>
+						<div class="team__dscr">
+							<div class="team__img">
+								<img src="img/team-img1.png" alt="" class="tm-img__circle"></div>
+							<div class="team__dscr-txt">
+								<div class="dscr-txt__function">Оператор</div>
+								<div class="dscr-txt__txt">С радостью поможет подобрать идеальный бургер и оформить заказ. </div>
+							</div>
+						</div>
+					</div><!--team__acordeon-->
+					<div class="team__acordeon">
+						<div class="team__name">
+							<div class="pre-name__triagle">
+								</div>
+								<div class="team-name__txt">Ричард Джеймс</div>
+						</div>
+						<div class="team__dscr">
+							<div class="team__img">
+								<img src="img/team-img1.png" alt="" class="tm-img__circle"></div>
+							<div class="team__dscr-txt">
+								<div class="dscr-txt__function">Оператор</div>
+								<div class="dscr-txt__txt">С радостью поможет подобрать идеальный бургер и оформить заказ. </div>
+							</div>
+						</div>
+					</div><!--team__acordeon-->
+						<div class="team__acordeon">
+						<div class="team__name">
+							<div class="pre-name__triagle">
+								</div>
+								<div class="team-name__txt">Ричард Джеймс</div>
+						</div>
+						<div class="team__dscr">
+							<div class="team__img">
+								<img src="img/team-img1.png" alt="" class="tm-img__circle"></div>
+							<div class="team__dscr-txt">
+								<div class="dscr-txt__function">Оператор</div>
+								<div class="dscr-txt__txt">С радостью поможет подобрать идеальный бургер и оформить заказ. </div>
+							</div>
+						</div>
+					</div><!--team__acordeon-->
+						<div class="team__acordeon">
+						<div class="team__name">
+							<div class="pre-name__triagle">
+								</div>
+								<div class="team-name__txt">Ричард Джеймс</div>
+						</div>
+						<div class="team__dscr">
+							<div class="team__img">
+								<img src="img/team-img1.png" alt="" class="tm-img__circle"></div>
+							<div class="team__dscr-txt">
+								<div class="dscr-txt__function">Оператор</div>
+								<div class="dscr-txt__txt">С радостью поможет подобрать идеальный бургер и оформить заказ. </div>
+							</div>
+						</div>
+					</div><!--team__acordeon-->
+					</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div><!--team__page-->
 </section>	
+<section>
+	<div class="menu__page">
+		<div class="menu__title">
+		Меню
+	</div>
+	<div class="accordeon__menu">
+	<ul class="accordeon-menu__list">
+		<li class="accordeon-menu__elem">
+			<a href="#" class="accordeon-menu__btn" style="background-image: url(img/menu1bg.png);">
+				
+			
+				<div class="accordeon-menu__btn-txt">Для мясоедов</div>
+			</a>
+			<a href="#" class="accordeon-menu__content">
+				<div class="accordeon-menu__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil incidunt alias optio enim cupiditate consequuntur magnam impedit doloremque. Tempore repellendus architecto ratione quasi id itaque fuga voluptates obcaecati sapiente, pariatur.</div>
+			</a>
+		</li>
+		<li class="accordeon-menu__elem">
+			<a href="#" class="accordeon-menu__btn" style="background-image: url(img/menu2bg.png);">
+				<div class="accordeon-menu__btn-txt">Вегетарианское</div>
+			</a>
+			<a href="#" class="accordeon-menu__content">
+				<div class="accordeon-menu__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil incidunt alias optio enim cupiditate consequuntur magnam impedit doloremque. Tempore repellendus architecto ratione quasi id itaque fuga voluptates obcaecati sapiente, pariatur.</div>
+			</a>
+		</li>
+		<li class="accordeon-menu__elem">
+			<a href="#" class="accordeon-menu__btn" style="background-image: url(img/menu3bg.png);">
+				<div class="accordeon-menu__btn-txt">Диетическое</div>
+			</a>
+			<a href="#" class="accordeon-menu__content">
+				<div class="accordeon-menu__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil incidunt alias optio enim cupiditate consequuntur magnam impedit doloremque. Tempore repellendus architecto ratione quasi id itaque fuga voluptates obcaecati sapiente, pariatur.</div>
+			</a>
+		</li>
+	</ul>
+	</div><!--accordeon__menu-->
+</div><!--menu__page-->
+</section>
+<section class="order__section">
+	<div class="order__container">
+		<div class="order__title">Закажите доставку</div>
+		<div class="form__container">
+		<div class="form__elem form__elem_first">
+		<form class="form">
+			<div class="form__row">
+				<label for="" class="form__block">
+					<div class="form__block-title">Имя</div>
+					<input type="text" class="form__input">
+				</label>
+				<label for="" class="form__block">
+					<div class="form__block-title">Телефон</div>
+					<input type="text" class="form__input">
+				</label>
+			</div>
+			<div class="form__row">
+				<label for="" class="form__block">
+					<div class="form__block-title">Улица</div>
+					<input type="text" class="form__input">
+				</label>
+			</div>
+			<div class="form__row">
+				<label for="" class="form__block">
+					<div class="form__block-title">Дом</div>
+					<input type="text" class="form__input">
+				</label>
+				<label for="" class="form__block">
+					<div class="form__block-title">Корпус</div>
+					<input type="text" class="form__input">
+				</label>
+				<label for="" class="form__block">
+					<div class="form__block-title">Квартира</div>
+					<input type="text" class="form__input">
+				</label>
+				<label for="" class="form__block">
+					<div class="form__block-title">Этаж</div>
+					<input type="text" class="form__input">
+				</label>
+			</div>
+		</form>
+		</div>
+		<div class="form__elem form__elem_secundar">
+			<div class="form__row">
+				<label for="" class="form__block">
+					<div class="form__block-title">Комментарий</div>
+					<textarea class="textarea__elem"></textarea>
+				</label>
+			</div>
+			<div class="form__row">
+				<label for="" class="form__block">
+					                        <div class="radio-group">
+                            <label class="radio">
+                                <input type="radio" name="radio" class="radio__elem">
+                                <div class="radio__content">
+                                    <div class="radio__btn">
+                                    </div>
+                                    <div class="radio__text">Потребуется сдача</div>
+                                </div>
+                            </label>
+                            <label class="radio">
+                                <input type="radio" name="radio" class="radio__elem">
+                                <div class="radio__content">
+                                    <div class="radio__btn"></div>
+                                    <div class="radio__text">Оплата по карте</div>
+                                </div>
+                            </label>
+
+                        </div>
+     
+				</label>
+			</div>
+			                  <div class="form__row">
+				<label for="" class="form__block form__block-check">
+					<input type="checkbox">
+					<div class="form__block-title form__block-title_check">Не перезванивать</div>
+				</label>
+			</div>
+		</div>
+		<div class="button button_form">
+			<a href="#">Заказать</a>
+		</div><!--button-->
+		<div class="button__clear">
+			<a href="#">Очистить</a></div>
+	</div>
+	</section>
+	<section>
+		<div class="map__footer-container">
+			<div class="footer">
+				<div class="footer__content">
+					<div class="footer__contacts-block">
+					<div class="footer__contacts">
+						<div class="contacts__adress">Санкт-Петербург, ул.Бабушкина, д.12/1, 15</div>
+					</div>
+					<div class="contacts__telefon">
+						<div class="sprite-phone"></div>
+						<div class="contacts__number">+7 (812) 377-13-77</div>
+					</div>
+					</div>
+					<div class="footer__social">
+						<div class="sprite-vk"></div>
+						<div class="sprite-fb"></div>
+						<div class="sprite-inst"></div>
+						<div class="sprite-twitter"></div>
+					</div>
+				</div>
+			</div>
+			</div>
+		</div>
+	</section>
 	</div><!--landing-page-->
 </body>
 </html>
