--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/general/sprite.svg">
 	<title>Document</title>
 </head>
 <body>
-	<div class="landing-page">
 		<section>
 			<div class="hero-page">
 				<div class="hero__container">
@@ -30,12 +31,15 @@
 							<li class="sidebar__elem sidebar__elem_txt"><a href="#">Контакты</a></li>
 							</ul>
 						</nav>
+						<div class="nav__sidebar-icon">
+							<img src="img/sidebar-icon.png" alt="" class="sidebar-icon__mdf">
+						</div>
 						<div class="button button_header">
 							<a href="#">Заказать</a>
 						</div><!--button-->
 					</div><!--header-->
 					<div class="hero__content">
-						<div class="content__img"><img src="img/burgher_hero-page.png" alt=""></div>
+						<div class="content__img"><img src="img/burgher_hero-page.png" alt="" class="img-hero"></div>
 						<div class="content__txt">
 							<ul>
 								<li class="content__txt1">Мы делаем</li>
@@ -58,26 +62,26 @@
 				<div class="we-best__content">
 					<ul class="content__block">
 						<li>
-							<ul class="content__elem">
-								<li><img src="img/meat.png" alt=""></li>
-								<li class="content__elem_txt1">100% свежее мясо</li>
-								<li class="content__elem_txt2">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</li>
-							</ul>
+							<div class="content__elem">
+								<div><img src="img/meat.png" alt=""></div>
+								<div class="content__elem_txt1">100% свежее мясо</div>
+								<div class="content__elem_txt2">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</div>
+							</div>
 						</li>
 						<li>
-							<ul class="content__elem">
-								<li><img src="img/hand.png" alt=""></li>
-								<li class="content__elem_txt1">Ручная  сборка</li>
-								<li class="content__elem_txt2">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</li>
-							</ul>
+							<div class="content__elem">
+								<div><img src="img/hand.png" alt=""></div>
+								<div class="content__elem_txt1">Ручная  сборка</div>
+								<div class="content__elem_txt2">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</div>
+							</div>
 						</li>
 						<li>
-							<ul class="content__elem">
-								<li><img src="img/natural.png" alt=""></li>
-								<li class="content__elem_txt1">Натуральные
-																ингредиенты</li>
-								<li class="content__elem_txt2">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</li>
-							</ul>
+							<div class="content__elem">
+								<div><img src="img/natural.png" alt=""></div>
+								<div class="content__elem_txt1">Натуральные
+																ингредиенты</div>
+								<div class="content__elem_txt2">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</div>
+							</div>
 						</li>
 					</ul>
 				</div>
@@ -86,78 +90,80 @@
 	</section><!--we-best-->
 	<section>
 <div class="people-page">
-	<div class="people_block1">
-		<div class="people_descr">
-			<div class="people_name">Константин Спилберг</div>
-			<div class="people_comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-			<div class="people_details">
-				<a href="#" class="people_details-btn">Подробнее</a>
-			</div>
-		</div>
-	</div>
-	<div class="people_block2">
-		<div class="people_descr">
-			<div class="people_name">Константин Спилберг</div>
-			<div class="people_comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-			<div class="people_details">
-				<a href="#" class="people_details-btn">Подробнее</a>
-			</div>
-		</div>
-	</div>
-	<div class="people_block3">
-		<div class="people_descr">
-			<div class="people_name">Константин Спилберг</div>
-			<div class="people_comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-			<div class="people_details">
-				<a href="#" class="people_details-btn">Подробнее</a>
-			</div>
-		</div>
-	</div>
-	<div class="people_block4">
-		<div class="people_descr">
-			<div class="people_name">Константин Спилберг</div>
-			<div class="people_comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-			<div class="people_details">
-				<a href="#" class="people_details-btn">Подробнее</a>
-			</div>
-		</div>
-	</div>
-	<div class="people_block5">
-		<div class="people_descr">
-			<div class="people_name">Константин Спилберг</div>
-			<div class="people_comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-			<div class="people_details">
-				<a href="#" class="people_details-btn">Подробнее</a>
-			</div>
-		</div>
-	</div>
-	<div class="people_block6">
-		<div class="people_descr">
-			<div class="people_name">Константин Спилберг</div>
-			<div class="people_comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-			<div class="people_details">
-				<a href="#" class="people_details-btn">Подробнее</a>
-			</div>
-		</div>
-	</div>
-	<div class="people_block7">
-		<div class="people_descr">
-			<div class="people_name">Константин Спилберг</div>
-			<div class="people_comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-			<div class="people_details">
-				<a href="#" class="people_details-btn">Подробнее</a>
-			</div>
-		</div>
-	</div>
-	<div class="people_block8">
-		<div class="people_descr">
-			<div class="people_name">Константин Спилберг</div>
-			<div class="people_comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
-			<div class="people_details">
-				<a href="#" class="people_details-btn">Подробнее</a>
-			</div>
-		</div>
-	</div>
+		<ul class="people__elements">
+			<li class="people__container"  style="background-image: url(img/people_img1.jpg)">
+				<div class="people__content">
+					<div class="people__name">Константин Спилберг</div>
+					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn">
+						<div class="more-btn__txt">Подробнее</div>
+					</a>
+				</div>
+			</li>
+						<li class="people__container"  style="background-image: url(img/people_img2.jpg)">
+				<div class="people__content">
+					<div class="people__name">Константин Спилберг</div>
+					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn">
+						<div class="more-btn__txt">Подробнее</div>
+					</a>
+				</div>
+			</li>
+						<li class="people__container"  style="background-image: url(img/people_img3.jpg)">
+				<div class="people__content">
+					<div class="people__name">Константин Спилберг</div>
+					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn">
+						<div class="more-btn__txt">Подробнее</div>
+					</a>
+				</div>
+			</li>
+						<li class="people__container"  style="background-image: url(img/people_img4.jpg)">
+				<div class="people__content">
+					<div class="people__name">Константин Спилберг</div>
+					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn">
+						<div class="more-btn__txt">Подробнее</div>
+					</a>
+				</div>
+			</li>
+						<li class="people__container"  style="background-image: url(img/people_img5.jpg)">
+				<div class="people__content">
+					<div class="people__name">Константин Спилберг</div>
+					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn">
+						<div class="more-btn__txt">Подробнее</div>
+					</a>
+				</div>
+			</li>
+						<li class="people__container"  style="background-image: url(img/people_img6.jpg)">
+				<div class="people__content">
+					<div class="people__name">Константин Спилберг</div>
+					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn">
+						<div class="more-btn__txt">Подробнее</div>
+					</a>
+				</div>
+			</li>
+						<li class="people__container"  style="background-image: url(img/people_img7.jpg)">
+				<div class="people__content">
+					<div class="people__name">Константин Спилберг</div>
+					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn">
+						<div class="more-btn__txt">Подробнее</div>
+					</a>
+				</div>
+			</li>
+						<li class="people__container"  style="background-image: url(img/people_img8.jpg)">
+				<div class="people__content">
+					<div class="people__name">Константин Спилберг</div>
+					<div class="people__comment">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</div>
+					<a href="#" class="more__btn">
+						<div class="more-btn__txt">Подробнее</div>
+					</a>
+				</div>
+			</li>
+		</ul>
 </div><!--people-page-->
 </section>	
 <section>
@@ -167,7 +173,9 @@
 				<div class="team__dscr__block">
 					<div class="team__txt">команда</div>
 					<div class="accordeon__block">
-					<div class="team__acordeon">
+				<ul class="accordeon__elements">
+					<li>
+					  <div class="team__acordeon">
 						<div class="team__name">
 							<div class="pre-name__triagle">
 								</div>
@@ -182,7 +190,9 @@
 							</div>
 						</div>
 					</div><!--team__acordeon-->
-					<div class="team__acordeon">
+				  </li>
+				  					<li>
+					  <div class="team__acordeon">
 						<div class="team__name">
 							<div class="pre-name__triagle">
 								</div>
@@ -197,7 +207,9 @@
 							</div>
 						</div>
 					</div><!--team__acordeon-->
-						<div class="team__acordeon">
+				  </li>
+				  					<li>
+					  <div class="team__acordeon">
 						<div class="team__name">
 							<div class="pre-name__triagle">
 								</div>
@@ -212,7 +224,9 @@
 							</div>
 						</div>
 					</div><!--team__acordeon-->
-						<div class="team__acordeon">
+				  </li>
+				  					<li>
+					  <div class="team__acordeon">
 						<div class="team__name">
 							<div class="pre-name__triagle">
 								</div>
@@ -227,7 +241,9 @@
 							</div>
 						</div>
 					</div><!--team__acordeon-->
-					</div>
+				  </li>
+				</ul>
+				</div>
 					</div>
 				</div>
 			</div>
@@ -275,8 +291,8 @@
 	<div class="order__container">
 		<div class="order__title">Закажите доставку</div>
 		<div class="form__container">
+			<form class="order__form">
 		<div class="form__elem form__elem_first">
-		<form class="form">
 			<div class="form__row">
 				<label for="" class="form__block">
 					<div class="form__block-title">Имя</div>
@@ -311,7 +327,6 @@
 					<input type="text" class="form__input">
 				</label>
 			</div>
-		</form>
 		</div>
 		<div class="form__elem form__elem_secundar">
 			<div class="form__row">
@@ -344,10 +359,11 @@
 				</label>
 			</div>
 			                  <div class="form__row">
-				<label for="" class="form__block form__block-check">
-					<input type="checkbox">
-					<div class="form__block-title form__block-title_check">Не перезванивать</div>
-				</label>
+                <label class="label__modif">
+                    <input class="checkbox" type="checkbox" name="checkbox-test">
+                    <span class="checkbox-custom"></span>
+                    <span class="label__txt">Не перезванивать</span>
+                </label>
 			</div>
 		</div>
 		<div class="button button_form">
@@ -356,6 +372,7 @@
 		<div class="button__clear">
 			<a href="#">Очистить</a></div>
 	</div>
+	</form>
 	</section>
 	<section>
 		<div class="map__footer-container">
@@ -366,22 +383,35 @@
 						<div class="contacts__adress">Санкт-Петербург, ул.Бабушкина, д.12/1, 15</div>
 					</div>
 					<div class="contacts__telefon">
-						<div class="sprite-phone"></div>
+						<div class="sprite-phone"><img src="img/phone.png" alt=""></div>
 						<div class="contacts__number">+7 (812) 377-13-77</div>
 					</div>
 					</div>
 					<div class="footer__social">
-						<div class="sprite-vk"></div>
-						<div class="sprite-fb"></div>
-						<div class="sprite-inst"></div>
-						<div class="sprite-twitter"></div>
+						<a href="#" class="sprite__elem">
+							<svg class="footer-icon">
+								<use xlink:href="css/general/sprite.svg#vk"></use>
+							</svg>
+						</a>
+						<a href="" class="sprite__elem"><svg class="footer-icon">
+								<use xlink:href="css/general/sprite.svg#fb"></use>
+							</svg></a>
+						<a href="" class="sprite__elem"><svg class="footer-icon">
+								<use xlink:href="css/general/sprite.svg#inst"></use>
+							</svg></a>
+						<a href="" class="sprite__elem"><svg class="footer-icon">
+								<use xlink:href="css/general/sprite.svg#twitter"></use>
+							</svg></a>	
 					</div>
 				</div>
 			</div>
 			</div>
 		</div>
 	</section>
+	</div>
+	</div>	
 	</div><!--landing-page-->
 </body>
 </html>
 <!---->
+
