--- a/index.html
+++ b/index.html
@@ -31,7 +31,26 @@
 							<li class="sidebar__elem sidebar__elem_txt"><a href="#">Контакты</a></li>
 							</ul>
 						</nav>
-						<div class="nav__sidebar-icon">
+
+
+						<div class="nav__sidebar-icon" id="side__click">
+									<div class="adaptive__sidebar">
+			<ul id="mobile__sidebar">
+					<li class="mobile__elements"><a href="#" class="mobile__item">О нас</a>
+				</li>
+					<li class="mobile__elements"><a href="#" class="mobile__item">Бургеры</a>
+				</li>
+					<li class="mobile__elements"><a href="#" class="mobile__item">Команда</a>
+				</li>
+					<li class="mobile__elements"><a href="#" class="mobile__item">Меню</a>
+				</li>
+					<li class="mobile__elements"><a href="#" class="mobile__item">Отзывы</a>
+				</li>
+					<li class="mobile__elements"><a href="#" class="mobile__item">Как мы работаем</a>
+				</li>
+					<li class="mobile__elements"><a href="#" class="mobile__item">Контакты</a>
+				</li></ul></div>
+
 							<img src="img/sidebar-icon.png" alt="" class="sidebar-icon__mdf">
 						</div>
 						<div class="button button_header">
@@ -89,6 +108,46 @@
 		</div><!--we-best-page-->
 	</section><!--we-best-->
 	<section>
+		<section>
+			<div class="burghers__page">
+				<div class="burghers__container">
+					<div class="burghers__item">
+						<div class="burgher__item-elem">
+							<div class="elem__img"></div>
+							<div class="elem__txt">Состав</div>
+						</div>
+							<div class="burghers__img">
+						<img src="img/black_bugher.png" alt="" class="brg__img">
+					</div>
+						<div class="burgher__item-elem2">
+							<div class="elem__img2"><span class="item-elem2-txt" >1200</span></div>
+							<div class="elem__txt2">Состав</div>
+						</div>
+					</div>
+					<div class="burghers__details">
+						<div class="details__name">Dark BEEF<br>
+					Burger</div>
+						<div class="details__dscr">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</div>
+						<div class="details__price">
+							<span class="price__nr">500</span>
+							<span class="price__txt">рублей</span>
+						</div>
+					</div>
+						<div class="burghers__arrow-left">
+					<a href="#">
+						<img src="img/arrow-scroll_left.png" alt="">
+					</a>
+				</div>
+				<div class="burghers__arrow-right">
+					<a href="#">
+						<img src="img/arrow-scroll_right.png" alt="">
+					</a>
+				</div>
+				<button class="burghers__btn">Заказать</button>
+				</div>
+
+			</div>
+		</section>
 <div class="people-page">
 		<ul class="people__elements">
 			<li class="people__container"  style="background-image: url(img/people_img1.jpg)">
@@ -411,6 +470,7 @@
 	</div>
 	</div>	
 	</div><!--landing-page-->
+	<script src="js/main.js" ></script>
 </body>
 </html>
 <!---->
