--- a/index.html
+++ b/index.html
@@ -82,24 +82,28 @@
 					<ul class="content__block">
 						<li>
 							<div class="content__elem">
-								<div><img src="img/meat.png" alt=""></div>
+								<div class="img__elem"><img src="img/meat.png" alt="" ></div>
+								<div class="cont__txt">
 								<div class="content__elem_txt1">100% свежее мясо</div>
-								<div class="content__elem_txt2">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</div>
+								<div class="content__elem_txt2">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</div></div>
 							</div>
 						</li>
 						<li>
 							<div class="content__elem">
-								<div><img src="img/hand.png" alt=""></div>
+								<div class="img__elem"><img src="img/hand.png" alt=""></div>
+								<div class="cont__txt">
 								<div class="content__elem_txt1">Ручная  сборка</div>
-								<div class="content__elem_txt2">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</div>
+								<div class="content__elem_txt2">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</div></div>
 							</div>
 						</li>
 						<li>
 							<div class="content__elem">
-								<div><img src="img/natural.png" alt=""></div>
+								<div class="img__elem"><img src="img/natural.png" alt=""></div>
+								<div class="cont__txt">
 								<div class="content__elem_txt1">Натуральные
 																ингредиенты</div>
 								<div class="content__elem_txt2">Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</div>
+								</div>
 							</div>
 						</li>
 					</ul>
@@ -121,7 +125,7 @@
 					</div>
 						<div class="burgher__item-elem2">
 							<div class="elem__img2"><span class="item-elem2-txt" >1200</span></div>
-							<div class="elem__txt2">Состав</div>
+							<div class="elem__txt2">ккал</div>
 						</div>
 					</div>
 					<div class="burghers__details">
@@ -148,6 +152,129 @@
 
 			</div>
 		</section>
+
+<section>
+	<div class="team__page">
+		<div class="team__container">
+			<div class="container__block">
+				<div class="team__dscr__block">
+					<div class="team__txt">команда</div>
+					<div class="accordeon__block">
+				<ul class="accordeon__elements">
+					<li>
+					  <div class="team__acordeon">
+						<div class="team__name">
+							<div class="pre-name__triagle">
+								</div>
+								<div class="team-name__txt">Дэниэл Редклиф</div>
+						</div>
+						<div class="team__dscr">
+							<div class="team__img">
+								<img src="img/team-img1.png" alt="" class="tm-img__circle"></div>
+							<div class="team__dscr-txt">
+								<div class="dscr-txt__function">Оператор</div>
+								<div class="dscr-txt__txt">С радостью поможет подобрать идеальный бургер и оформить заказ. </div>
+							</div>
+						</div>
+					</div><!--team__acordeon-->
+				  </li>
+				  					<li>
+					  <div class="team__acordeon">
+						<div class="team__name">
+							<div class="pre-name__triagle">
+								</div>
+								<div class="team-name__txt">Ричард Джеймс</div>
+						</div>
+						<div class="team__dscr">
+							<div class="team__img">
+								<img src="img/team-img1.png" alt="" class="tm-img__circle"></div>
+							<div class="team__dscr-txt">
+								<div class="dscr-txt__function">Оператор</div>
+								<div class="dscr-txt__txt">С радостью поможет подобрать идеальный бургер и оформить заказ. </div>
+							</div>
+						</div>
+					</div><!--team__acordeon-->
+				  </li>
+				  					<li>
+					  <div class="team__acordeon">
+						<div class="team__name">
+							<div class="pre-name__triagle">
+								</div>
+								<div class="team-name__txt">Джейк Финн</div>
+						</div>
+						<div class="team__dscr">
+							<div class="team__img">
+								<img src="img/team-img1.png" alt="" class="tm-img__circle"></div>
+							<div class="team__dscr-txt">
+								<div class="dscr-txt__function">Оператор</div>
+								<div class="dscr-txt__txt">С радостью поможет подобрать идеальный бургер и оформить заказ. </div>
+							</div>
+						</div>
+					</div><!--team__acordeon-->
+				  </li>
+				  					<li>
+					  <div class="team__acordeon">
+						<div class="team__name">
+							<div class="pre-name__triagle">
+								</div>
+								<div class="team-name__txt">Николай Иванов</div>
+						</div>
+						<div class="team__dscr">
+							<div class="team__img">
+								<img src="img/team-img1.png" alt="" class="tm-img__circle"></div>
+							<div class="team__dscr-txt">
+								<div class="dscr-txt__function">Оператор</div>
+								<div class="dscr-txt__txt">С радостью поможет подобрать идеальный бургер и оформить заказ. </div>
+							</div>
+						</div>
+					</div><!--team__acordeon-->
+				  </li>
+				</ul>
+				</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div><!--team__page-->
+</section>	
+<section>
+	<div class="menu__page">
+		<div class="menu__title">
+		Меню
+	</div>
+	<div class="accordeon__menu">
+	<ul class="accordeon-menu__list">
+		<li class="accordeon-menu__elem">
+			<a href="#" class="accordeon-menu__btn" style="background-image: url(img/menu1bg.png);">
+				
+			
+				<div class="accordeon-menu__btn-txt">Для мясоедов</div>
+			</a>
+			<a href="#" class="accordeon-menu__content">
+				<div class="accordeon-menu__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil incidunt alias optio enim cupiditate consequuntur magnam impedit doloremque. Tempore repellendus architecto ratione quasi id itaque fuga voluptates obcaecati sapiente, pariatur.</div>
+			</a>
+		</li>
+		<li class="accordeon-menu__elem">
+			<a href="#" class="accordeon-menu__btn" style="background-image: url(img/menu2bg.png);">
+				<div class="accordeon-menu__btn-txt">Вегетарианское</div>
+			</a>
+			<a href="#" class="accordeon-menu__content">
+				<div class="accordeon-menu__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil incidunt alias optio enim cupiditate consequuntur magnam impedit doloremque. Tempore repellendus architecto ratione quasi id itaque fuga voluptates obcaecati sapiente, pariatur.</div>
+			</a>
+		</li>
+		<li class="accordeon-menu__elem">
+			<a href="#" class="accordeon-menu__btn" style="background-image: url(img/menu3bg.png);">
+				<div class="accordeon-menu__btn-txt">Диетическое</div>
+			</a>
+			<a href="#" class="accordeon-menu__content">
+				<div class="accordeon-menu__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil incidunt alias optio enim cupiditate consequuntur magnam impedit doloremque. Tempore repellendus architecto ratione quasi id itaque fuga voluptates obcaecati sapiente, pariatur.</div>
+			</a>
+		</li>
+	</ul>
+	</div><!--accordeon__menu-->
+</div><!--menu__page-->
+</section>
+
 <div class="people-page">
 		<ul class="people__elements">
 			<li class="people__container"  style="background-image: url(img/people_img1.jpg)">
@@ -225,127 +352,7 @@
 		</ul>
 </div><!--people-page-->
 </section>	
-<section>
-	<div class="team__page">
-		<div class="team__container">
-			<div class="container__block">
-				<div class="team__dscr__block">
-					<div class="team__txt">команда</div>
-					<div class="accordeon__block">
-				<ul class="accordeon__elements">
-					<li>
-					  <div class="team__acordeon">
-						<div class="team__name">
-							<div class="pre-name__triagle">
-								</div>
-								<div class="team-name__txt">Ричард Джеймс</div>
-						</div>
-						<div class="team__dscr">
-							<div class="team__img">
-								<img src="img/team-img1.png" alt="" class="tm-img__circle"></div>
-							<div class="team__dscr-txt">
-								<div class="dscr-txt__function">Оператор</div>
-								<div class="dscr-txt__txt">С радостью поможет подобрать идеальный бургер и оформить заказ. </div>
-							</div>
-						</div>
-					</div><!--team__acordeon-->
-				  </li>
-				  					<li>
-					  <div class="team__acordeon">
-						<div class="team__name">
-							<div class="pre-name__triagle">
-								</div>
-								<div class="team-name__txt">Ричард Джеймс</div>
-						</div>
-						<div class="team__dscr">
-							<div class="team__img">
-								<img src="img/team-img1.png" alt="" class="tm-img__circle"></div>
-							<div class="team__dscr-txt">
-								<div class="dscr-txt__function">Оператор</div>
-								<div class="dscr-txt__txt">С радостью поможет подобрать идеальный бургер и оформить заказ. </div>
-							</div>
-						</div>
-					</div><!--team__acordeon-->
-				  </li>
-				  					<li>
-					  <div class="team__acordeon">
-						<div class="team__name">
-							<div class="pre-name__triagle">
-								</div>
-								<div class="team-name__txt">Ричард Джеймс</div>
-						</div>
-						<div class="team__dscr">
-							<div class="team__img">
-								<img src="img/team-img1.png" alt="" class="tm-img__circle"></div>
-							<div class="team__dscr-txt">
-								<div class="dscr-txt__function">Оператор</div>
-								<div class="dscr-txt__txt">С радостью поможет подобрать идеальный бургер и оформить заказ. </div>
-							</div>
-						</div>
-					</div><!--team__acordeon-->
-				  </li>
-				  					<li>
-					  <div class="team__acordeon">
-						<div class="team__name">
-							<div class="pre-name__triagle">
-								</div>
-								<div class="team-name__txt">Ричард Джеймс</div>
-						</div>
-						<div class="team__dscr">
-							<div class="team__img">
-								<img src="img/team-img1.png" alt="" class="tm-img__circle"></div>
-							<div class="team__dscr-txt">
-								<div class="dscr-txt__function">Оператор</div>
-								<div class="dscr-txt__txt">С радостью поможет подобрать идеальный бургер и оформить заказ. </div>
-							</div>
-						</div>
-					</div><!--team__acordeon-->
-				  </li>
-				</ul>
-				</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div><!--team__page-->
-</section>	
-<section>
-	<div class="menu__page">
-		<div class="menu__title">
-		Меню
-	</div>
-	<div class="accordeon__menu">
-	<ul class="accordeon-menu__list">
-		<li class="accordeon-menu__elem">
-			<a href="#" class="accordeon-menu__btn" style="background-image: url(img/menu1bg.png);">
-				
-			
-				<div class="accordeon-menu__btn-txt">Для мясоедов</div>
-			</a>
-			<a href="#" class="accordeon-menu__content">
-				<div class="accordeon-menu__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil incidunt alias optio enim cupiditate consequuntur magnam impedit doloremque. Tempore repellendus architecto ratione quasi id itaque fuga voluptates obcaecati sapiente, pariatur.</div>
-			</a>
-		</li>
-		<li class="accordeon-menu__elem">
-			<a href="#" class="accordeon-menu__btn" style="background-image: url(img/menu2bg.png);">
-				<div class="accordeon-menu__btn-txt">Вегетарианское</div>
-			</a>
-			<a href="#" class="accordeon-menu__content">
-				<div class="accordeon-menu__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil incidunt alias optio enim cupiditate consequuntur magnam impedit doloremque. Tempore repellendus architecto ratione quasi id itaque fuga voluptates obcaecati sapiente, pariatur.</div>
-			</a>
-		</li>
-		<li class="accordeon-menu__elem">
-			<a href="#" class="accordeon-menu__btn" style="background-image: url(img/menu3bg.png);">
-				<div class="accordeon-menu__btn-txt">Диетическое</div>
-			</a>
-			<a href="#" class="accordeon-menu__content">
-				<div class="accordeon-menu__txt">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil incidunt alias optio enim cupiditate consequuntur magnam impedit doloremque. Tempore repellendus architecto ratione quasi id itaque fuga voluptates obcaecati sapiente, pariatur.</div>
-			</a>
-		</li>
-	</ul>
-	</div><!--accordeon__menu-->
-</div><!--menu__page-->
-</section>
+
 <section class="order__section">
 	<div class="order__container">
 		<div class="order__title">Закажите доставку</div>
